test/cases/negative/disable-comment-custom.ts
const a = z.ref(0)
console.log({
  ...toRefs(a)
})


// @custom-imports-disable
